--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JordanShoes</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   
+  <nav class="navegacao">
+    <h1>JordanShoes</h1>
+  </nav>
+
+  <section id="home">
+    <div class="fil">
+    </div>
+    <div class="conteudo">
+      <h1>A melhor loja de Jordan</h1>
+      <p>O tênis Jordan é fruto de uma velha e forte parceria entre a Nike e o jogador Michael Jordan.</p>
+    </div>   
+  </section>
+
+  <section id="main">
+    <div class="container">
+        <div class="destaque">
+          <h1>Destaques</h1>
+          <span>Frete grátis e chinelo de brinde é aqui, aproveite por tempo limitado. </span>
+        </div>
+        
+        <div class="cards">
+          <div class="card">
+            <div class="image">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+
+  <footer>
+    <span>Todos os direitos reservados.</span>
+  </footer>
 </body>
 </html>
