--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 </head>
 <body>
   
-  <nav class="navegacao">
-    <h1>JordanShoes</h1>
+  <nav>
+    <div class="desconto">
+      <span>Ganhe R$ 10,00 de desconto no frete</span>
+    </div>
+    <div class="navegacao">
+      <h1>JordanShoes</h1>
+    </div>
   </nav>
 
   <section id="home">
@@ -36,7 +41,7 @@
         <div class="cards">
           <div class="card">
             <div class="image">
-              <img src="" alt="">
+              <img src="assets/jordan/jordan1.svg" alt="jordan">
             </div>
           </div>
         </div>
@@ -46,5 +51,7 @@
   <footer>
     <span>Todos os direitos reservados.</span>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
